<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BankActivity">

    <!--Edit Text to put the number of coins the user wants to deposit-->
    <EditText
        android:id="@+id/depositCoins"
        android:layout_width="76dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="Name Of User To Gift To"
        android:ems="10"
        android:hint="@string/coins"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/depositCoinstxt" />

    <!--Text View that displays the number of coins the user has to deposit or gift-->
    <TextView
        android:id="@+id/coinsCollectedtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="72dp"
        android:text="Coins Collected"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Text View that displays how much GOLD the user has in the bank-->
    <TextView
        android:id="@+id/goldInBanktxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="32dp"
        android:text="Gold In The Bank"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coinsCollectedtxt" />

    <!--Text View that tells a user to enter a number to deposit coins-->
    <TextView
        android:id="@+id/depositCoinstxt"
        android:layout_width="289dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/depostitxt"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goldInBanktxt" />

    <!--Edit Text to put the UID of the user they want to gift coins to-->
    <EditText
        android:id="@+id/giftnametxt"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="Name Of User To Gift To"
        android:ems="10"
        android:hint="@string/giftnametxt"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardDeposit" />

    <!--Edit Text to put the number of coins they would like to gift-->
    <EditText
        android:id="@+id/giftamounttxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="Amount To Gift"
        android:ems="10"
        android:hint="@string/giftamounttxt"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/giftnametxt" />


    <!--Card View for pressing to deposit coins-->
    <android.support.v7.widget.CardView
        android:id="@+id/cardDeposit"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/depositCoins">

        <RelativeLayout
            android:layout_width="298dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textDeposit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/deposit"
                android:textColor="#fff"
                android:textSize="18sp" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <!--Card View for pressing to gift coins-->
    <android.support.v7.widget.CardView
        android:id="@+id/cardGift"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="@color/colorAccent"
        android:foreground="?android:attr/selectableItemBackground"
        android:focusable="true"
        android:clickable="true"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/giftamounttxt">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textGift"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/gift"
                android:textColor="#fff"
                android:textSize="18sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <!--Card View for pressing to check if any other user has sent you some coins-->
    <android.support.v7.widget.CardView
        android:id="@+id/cardRetrieve"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="@color/colorAccent"
        android:foreground="?android:attr/selectableItemBackground"
        android:focusable="true"
        android:clickable="true"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        app:layout_constraintTop_toBottomOf="@+id/cardDeposit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textRetreive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/retrieve"
                android:textColor="#fff"
                android:textSize="18sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>