<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/subu"
    tools:context=".createAccActivity">

    <!--Edit Text to put their confirmation password-->
    <EditText
        android:id="@+id/enterPassword2"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="64dp"
        android:autofillHints="@string/password"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_name"
        android:ems="10"
        android:hint="@string/confpassword"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <!--Edit Text to put their email-->
    <EditText
        android:id="@+id/enterEmail"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="32dp"
        android:autofillHints="@string/email"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_adb"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/enterPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--Edit Text to put their password-->
    <EditText
        android:id="@+id/enterPassword"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="32dp"
        android:autofillHints="@string/password"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_name"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/enterPassword2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <!--Card View for pressing to create an account-->
    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="44dp"
        app:cardBackgroundColor="@color/colorAccent"
        android:foreground="?android:attr/selectableItemBackground"
        android:focusable="true"
        android:clickable="true"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/createAcc"
                android:textColor="#fff"
                android:textSize="18sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>