...
            android:layout_width="85dp"
            android:layout_height="42dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:background="@color/White"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <!--Text View that displays the different timers when the bonus modes are active-->
        <TextView
            android:id="@+id/ghostTimeTrialTime"
            android:layout_width="85dp"
            android:layout_height="42dp"
...


    </android.support.constraint.ConstraintLayout>

    <!--Navigation drawer that slides out in front of the map-->
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_view"
        app:headerLayout="@layout/nav_header">
...
