<resources>
    <string name="app_name">Coinz</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="createAnAcc">Create An Account</string>
    <string name="title">Coinz</string>
    <string name="title_activity_login">loginActivity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confpassword">Confirm Password</string>
...
